# dintel-data-agent

./: .env.example  .gitignore  CLAUDE.md  api_credentials.yaml  main.py  project-structure.txt  pyproject.toml  readme.md  requirements.txt  setup.py  test_enhanced_integration.py
config/: .env.example  api_credentials.yaml.example  pipeline_config.yaml
src/: pipeline.py
src/app/: dashboard.py
src/app/pages/: campaign_performance.py  conversion_analysis.py  custom_reports.py  overview.py  traffic_analysis.py
src/data/: acquisition.py  processing.py
src/data/connectors/: google_analytics.py  google_analytics_enhanced.py  settings.py
src/data/connectors/api/: __init__.py  ga4_api.py  sheets_api.py
src/data/connectors/auth/: __init__.py  google_auth.py
src/data/connectors/services/: __init__.py  analytics_service.py
src/database/: db_manager.py
src/utils/: logging_config.py
src/visualization/: plotting.py
tests/: test_dashboard.py  test_dashboard_pages.py  test_pipeline.py
